--- a/siamit/Backend/.env
+++ b/siamit/Backend/.env
@@ -2,9 +2,9 @@
 DB_HOST=localhost
 DB_PORT=3306
 DB_USERNAME=root
-DB_PASSWORD= 
+DB_PASSWORD= @
 DB_DATABASE=siamitleave
-
+BASEURL = https://krista-nonmutable-evolutionally.ngrok-free.dev
 # JWT Configuration
 JWT_SECRET=siamit_jwt_secret_2024_very_secure_key
 
