--- a/siamit/Backend/.env
+++ b/siamit/Backend/.env
@@ -4,7 +4,7 @@ DB_PORT=3306
 DB_USERNAME=root
 DB_PASSWORD= @
 DB_DATABASE=siamitleave
-BASEURL = https://krista-nonmutable-evolutionally.ngrok-free.dev
+BASEURL = https://api-leave-management.flowmisite.com/
 # JWT Configuration
 JWT_SECRET=siamit_jwt_secret_2024_very_secure_key
 
@@ -13,7 +13,7 @@ LINE_BOT_CHANNEL_ACCESS_TOKEN=QmXun1AMFnrLdqlkBXnu77Q8wB+9ForDVNQmUgAn9Qk/zKskFU
 LINE_BOT_CHANNEL_SECRET=f5f66f895b483e0ab68fd1a4f5f15757
 
 LINE_CHANNEL_SECRET=05a6c43f1eb07bba271c7fa87cd658f8
-LINE_BOT_REDIRECT_URI=https://krista-nonmutable-evolutionally.ngrok-free.dev/api/line/callback
+LINE_BOT_REDIRECT_URI=https://api-leave-management.flowmisite.com/api/line/callback
 LINE_CHANNEL_ID=2007875128
 # Server Configuration
 PORT=3001
