--- a/siamit/Backend/.env
+++ b/siamit/Backend/.env
@@ -4,7 +4,7 @@ DB_PORT=3306
 DB_USERNAME=root
 DB_PASSWORD= 
 DB_DATABASE=siamitleave
-BASEURL = http://localhost:3001
+BASEURL = https://api-leave-management.flowmisite.com/
 # JWT Configuration
 JWT_SECRET=siamit_jwt_secret_2024_very_secure_key
 
