--- a/siamit/frontend/package.json
+++ b/siamit/frontend/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@supabase/supabase-js": "^2.50.0",
     "@tanstack/react-query": "^5.56.2",
+    "@types/dompurify": "^3.0.5",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -48,6 +49,7 @@
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "date-holidays": "^3.24.4",
+    "dompurify": "^3.3.0",
     "embla-carousel-react": "^8.3.0",
     "i18next": "^25.3.0",
     "init": "^0.1.2",
